Fix sidebar on firefox

--- a/app/static/styles/collapse.css
+++ b/app/static/styles/collapse.css
@@ -2,10 +2,12 @@
     transition: max-width 0.2s ease-out;
     position: relative;
     z-index: 2;
+    height: 100%;
 }
 
 .tg-poker__collapse__content {
     overflow: hidden;
+    height: 100%;
 }
 
 .tg-collapse__toggle {
